kubernetes/app-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoices-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoices-backend
  template:
    metadata:
      labels:
        app: invoices-backend
    spec:
      containers:
        - name: backend

          image: trajche0/invoices-backend:latest
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: invoices-backend
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
